# MedRag

./: .env  .gitignore  DEPLOYMENT_CHECKLIST.md  QUICK_START_TTS.md  README.md  TTS_INTEGRATION_SUMMARY.md  check_vps.py  docker-compose.e2e.yml  docker-compose.local.yml  docker-compose.yml  doctor_prices.md  doctors_with_services.md  fetch_logs_temp.py  get_full_logs.py  get_logs.py  get_vps_env.py  get_vps_logs.py  index.html  list_voices.py  package.json  plan.md  send_and_run_tts_test.py  setup_vps.sh  tailwind.config.ts  update_local.sh  update_vps.sh  vite.config.ts
System Design & Arch/: backend_architecture.mmd  backend_query_flow.mmd
backend/: .env.example  .env.previous  Dockerfile  README.md  TESTING.md  clinics.txt  connect2supabase.py  pyproject.toml  requirements.txt  run.py  test.py  test_arabic.py  test_extraction.py  test_formatter_standalone.py  test_infer.py  test_phoenix_connection.py  test_surgery_schedule.py  test_tts.py  test_workflow.py  verify_ortho_match.py
backend/MCP/: .gitignore  Dockerfile  README.md  clinic_server.py  config.py  docker-compose.yaml  http_client.py  matching_engine.py  requirements.txt  test_fetch.py  test_fetch_30d.py  test_formatter.py  test_mcp_tool_direct.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  analytics.py  asr.py  chat.py  documents.py  evaluation.py  tts.py  whatsapp.py
backend/app/core/: conversation_controller.py  conversation_memory.py  doctor_prices.json  document_processor.py  egyptian_mappings.py  intent_router.py  prices_lookup.py  qa_engine.py  radiology_knowledge.py  redis_client.py  session_manager.py  settings.py  state_manager.py  text_to_speech.py  tts_exceptions.py  tts_normalization.py  tts_settings.py  vector_store.py
backend/app/integrations/: __init__.py  mcp_client.py
backend/app/models/: __init__.py  schemas.py
backend/app/observability/: phoenix.py
backend/app/services/: __init__.py  clinic_workflow.py  supabase_reindexer.py
backend/scripts/: e2e_real_clinic_api.sh  index_local.py  parse_prices.py  reindex_supabase.py  run_pytest_in_docker.sh
backend/tests/: conftest.py  test_ammya_doctor_inference.py  test_ammya_routing.py  test_arabic_time_markers.py  test_asr_unit.py  test_chat_api_integration.py  test_chat_prompt_and_pending_action_helpers.py  test_chat_query_with_voice_controller.py  test_clinic_infer_phrase_excludes_doctor_after_clinic.py  test_clinic_workflow.py  test_clinic_workflow_canonical_clinic_name.py  test_clinic_workflow_clinic_resolution.py  test_clinic_workflow_disambiguation.py  test_clinic_workflow_multi_intent.py  test_clinic_workflow_no_clinic_infer_when_doctor_present.py  test_clinic_workflow_schedule_no_false_doctor_inference.py  test_clinic_workflow_who_is_present.py  test_conversation_controller.py  test_conversation_memory_pending_action.py  test_infer_doctor_rejects_specialties.py  test_intent_router.py  test_mcp_matching_integration_real_names.py  test_qa_engine.py  test_tts_egyptian_fixes.py  test_tts_unit.py  test_whatsapp_integration.py
backend/uploads/: supabase_1759002349912-zg5uaad59ap.docx  supabase_1759045651076-kbzf1i0v2m.txt  supabase_1759046810942-soz0donj9o.docx  supabase_1759150246505-k2ril2c14e8.txt  supabase_1759151620580-fcuam0j95ju.txt  supabase_1759216575048-vqg2g4e2z5b.txt  supabase_1759754275084-n2o7ljlbq09.txt  supabase_1761996247859-27jwnkmyriz.txt  supabase_1763208357249-r1ksncdsjf.txt
(+65 files in other folders)
